# sonic-kb

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  run_mcp.py
docs/: council-diagram.txt
knowledge-base/: grounding-rules.json  methodology.json
knowledge-base/best-practices/: index.json
knowledge-base/code-paths/: _index.json  acl-program.json  arp-resolution.json  config-flow.json  fdb-learn.json  lag-create.json  port-config.json  route-install-bgp.json  route-install-static.json  route-withdraw.json  vlan-create.json  vxlan-vtep-create.json
knowledge-base/definitions/: daemons.json  redis_dbs.json  timers.json
knowledge-base/diagnostics/: _index.json  bfd-flapping.json  bgp-not-establishing.json  express-reboot-failure.json  lag-not-forming.json  port-down.json  route-missing-hardware.json  vlan-not-programming.json
knowledge-base/human-errors/: _index.json  direct-frr-vtysh.json  direct-redis-write.json  dpkg-force-install.json  express-reboot-wrong-platform.json  manual-config-db-json-edit.json  manual-ip-link.json  restart-swss-during-traffic.json  stale-warmboot-files.json  wrong-frr-restart.json  wrong-reload-order.json
knowledge-base/indexes/: _daemon_index.json  _db_table_index.json  _human_error_index.json  _log_message_index.json  _source_refs_index.json  _vector_index.json
knowledge-base/logs/: bgpcfgd.json  fpmsyncd.json  orchagent.json  portmgrd.json  syncd-express.json  syncd.json
review/: README.md  council-log.jsonl  council-log.schema.json
src/: mcp_server.py
tests/: conftest.py  test_integration.py
(+41 files in other folders)
